mdapipkg/objects/DynamicEditPageURLParameters__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>FieldOnObject__c</fullName>
        <label>FieldOnObject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectApiName__c</fullName>
        <label>ObjectApiName</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UrlParam__c</fullName>
        <label>UrlParam</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DynamicEditPageURLParameters</label>
</CustomObject>